--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <h1>:Despliegue con AWS Learner Lab!</h1>
+<h1>editado 2.0</h1>
 </body>
 </html>
